opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: "Hannes Mehnert <hannes@mehnert.org>"
license: "ISC"
homepage: "https://github.com/hannesm/archive-opam"
doc: "https://hannesm.github.io/archive-opam/doc"
bug-reports: "https://github.com/hannesm/archive-opam/issues"
depends: [
  "ocaml" {>= "4.14.2"}
  "dune" {>= "3.16.0"}
  "logs" {>= "0.7.0"}
  "bos" {>= "0.2.1"}
  "fmt" {>= "0.9.0"}
  "cmdliner" {>= "1.3.0"}
  "opam-client" {>= "2.2.1"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/hannesm/archive-opam.git"
synopsis: "Archive opam packages"
